fix flickering pointer hand/arrow when selecting letters

--- a/src/components/CWGrid.css
+++ b/src/components/CWGrid.css
@@ -3,6 +3,10 @@
   justify-content: center;
 }
 
+.CWGrid:hover {
+  cursor: pointer;
+}
+
 .CWGrid {
   max-height: 500px;
   max-width: 500px;
