--- a/src/components/CWLetterBox.css
+++ b/src/components/CWLetterBox.css
@@ -3,7 +3,6 @@
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE10+/Edge */
   user-select: none; /* Standard */
-  cursor: pointer;
   font-size: 19px;
   line-height: 27px;
   text-align: center;
